--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
     "react-hotkeys-hook": "^4.6.1",
+    "react-wrap-balancer": "^1.1.1",
     "recharts": "^2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
