--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -4,11 +4,11 @@ on:
   # schedule:
   #   - cron: "*/33 * * * *" # Runs every 33 minutes
   workflow_dispatch:
-    # inputs:
-    #   ForceDeploy:
-    #     description: "Force deployment regardless of changes"
-    #     required: false
-    #     default: "false"
+    inputs:
+      ForceDeploy:
+        description: "Force deployment regardless of changes"
+        required: false
+        default: "false"
 
 jobs:
   update-and-deploy:
@@ -46,7 +46,7 @@ jobs:
           fi
 
       - name: Commit and push changes
-        if: steps.check_changes.outputs.changes == 'true'
+        if: steps.check_changes.outputs.changes == 'true' || inputs.ForceDeploy == 'true'
         run: |
           git add .
           git commit -m "Automated update and deployment"
