--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
+    "mongoose": "^8.9.5",
     "next": "15.1.1",
     "next-themes": "^0.4.4",
     "nuqs": "^2.2.3",
