--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mongoose": "^8.9.5",
     "next": "15.1.1",
     "next-themes": "^0.4.4",
+    "nprogress": "^0.2.0",
     "nuqs": "^2.2.3",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
@@ -61,6 +62,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
