--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "prebuild": "python -m pip install -r requirements.txt && python src/preBuild.py",
-    "build": "node src/updateLastUpdated.js && next build",
+    "build": "next build",
     "run": "next build && serve out",
     "start": "next start",
     "lint": "next lint",
