--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "prebuild": "python src/preBuild.py",
-    "build": "next build && cp _headers out/",
+    "build": "next build",
     "run": "next build && serve out",
     "start": "next start",
     "lint": "next lint",
